modules/gdscript/tests/scripts/analyzer/errors/nullable_method_call_nested_on_nullable_return.gd
class A:
    var bar: String? = null
    var baz: A? = null
    var barz: A = null
    func get_baz() -> A?:
        return null
func test():
    var foo: A = null
    foo.barz.get_baz().bar